--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
     .progress-bar { height: 8px; border-radius: 9999px; }
     .budget-tile { transition: transform 0.2s; }
     .budget-tile:hover { transform: translateY(-2px); }
+    .child-tile { transition: transform 0.2s; }
+    .child-tile:hover { transform: translateY(-2px); }
   </style>
 </head>
 <body class="bg-gray-100 font-sans">
+  <!-- Auth Section (Unchanged) -->
   <div id="auth-section" class="min-h-screen flex items-center justify-center bg-gray-100">
     <div id="login-modal" class="bg-white p-6 sm:p-8 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
       <h2 class="text-xl sm:text-2xl font-bold mb-6 text-center text-gray-800">Login</h2>
@@ -74,7 +77,9 @@
     </div>
   </div>
 
+  <!-- App Section -->
   <div id="app-section" class="hidden min-h-screen bg-gray-100">
+    <!-- Header (Unchanged) -->
     <header class="bg-blue-600 text-white p-3 sm:p-4 flex flex-col sm:flex-row justify-between items-center gap-2 sm:gap-0">
       <h1 id="page-title" class="text-xl sm:text-2xl font-bold">Budget Dashboard</h1>
       <div class="flex items-center gap-2 sm:gap-4">
@@ -85,17 +90,40 @@
         <button id="logout-button" class="bg-red-600 text-white px-3 py-2 rounded-lg hover:bg-red-700 transition text-sm sm:text-base">Logout</button>
       </div>
     </header>
+    <!-- Navigation: Added Child Accounts Tab -->
     <nav class="bg-gray-800 text-white p-3 sm:p-4">
       <div class="nav flex flex-col sm:flex-row space-y-2 sm:space-y-0 sm:space-x-4">
         <button id="dashboard-tab" class="px-3 py-2 rounded-lg bg-blue-800 hover:bg-blue-900 transition text-sm sm:text-base">Dashboard</button>
         <button id="transactions-tab" class="px-3 py-2 rounded-lg hover:bg-blue-900 transition text-sm sm:text-base">Transactions</button>
         <button id="budgets-tab" class="px-3 py-2 rounded-lg hover:bg-blue-900 transition text-sm sm:text-base">Budgets</button>
         <button id="categories-tab" class="px-3 py-2 rounded-lg hover:bg-blue-900 transition text-sm sm:text-base">Categories</button>
+        <button id="child-accounts-tab" class="px-3 py-2 rounded-lg hover:bg-blue-900 transition text-sm sm:text-base">Child Accounts</button>
         <button id="profile-tab" class="px-3 py-2 rounded-lg hover:bg-blue-900 transition text-sm sm:text-base">Profile</button>
       </div>
     </nav>
     <main class="p-4 sm:p-6">
+      <!-- Dashboard Section: Updated Labels, After Budget, Filter, Child Tiles -->
       <div id="dashboard-section" class="space-y-4 sm:space-y-6">
+        <!-- Filter Controls -->
+        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+          <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Filter Dashboard</h3>
+          <div class="flex flex-col sm:flex-row gap-4">
+            <select id="dashboard-filter" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 w-full sm:w-auto">
+              <option value="1week">Last 1 Week</option>
+              <option value="1month">Last 1 Month</option>
+              <option value="thisMonth">This Month</option>
+              <option value="lastMonth">Last Month</option>
+              <option value="thisYear">This Year</option>
+              <option value="lastYear">Last Year</option>
+              <option value="custom">Custom Range</option>
+            </select>
+            <div id="custom-date-range" class="hidden flex flex-col sm:flex-row gap-4">
+              <input id="filter-start-date" type="date" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+              <input id="filter-end-date" type="date" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            </div>
+          </div>
+        </div>
+        <!-- Summary Tiles -->
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
           <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
             <h3 class="text-base sm:text-lg font-semibold text-gray-700">Balance</h3>
@@ -106,12 +134,16 @@
             <p id="total-budget" class="text-lg sm:text-2xl font-bold text-gray-900">₹0</p>
           </div>
           <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-            <h3 class="text-base sm:text-lg font-semibold text-gray-700">Total Remaining</h3>
+            <h3 class="text-base sm:text-lg font-semibold text-gray-700">Total Unspent Budget</h3>
             <p id="total-remaining" class="text-lg sm:text-2xl font-bold text-gray-900">₹0</p>
+            <p class="text-sm text-gray-500 mt-2">After Budget: <span id="after-budget">₹0</span></p>
           </div>
         </div>
+        <!-- Budget and Child Tiles -->
         <div id="budget-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
+        <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
       </div>
+      <!-- Transactions Section (Unchanged) -->
       <div id="transactions-section" class="hidden space-y-4 sm:space-y-6">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Add Transaction</h3>
@@ -144,6 +176,7 @@
           </table>
         </div>
       </div>
+      <!-- Budgets Section (Unchanged) -->
       <div id="budgets-section" class="hidden space-y-4 sm:space-y-6">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Add Budget</h3>
@@ -168,6 +201,7 @@
           </table>
         </div>
       </div>
+      <!-- Categories Section (Unchanged) -->
       <div id="categories-section" class="hidden space-y-4 sm:space-y-6">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Add Category</h3>
@@ -198,6 +232,49 @@
           </table>
         </div>
       </div>
+      <!-- Child Accounts Section -->
+      <div id="child-accounts-section" class="hidden space-y-4 sm:space-y-6">
+        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+          <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Child Account Transactions</h3>
+          <!-- Admin: Child Selector -->
+          <div id="child-selector" class="mb-4 hidden">
+            <label class="block text-sm font-medium text-gray-700">Select Child</label>
+            <select id="child-user-id" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+              <option value="">Select a Child</option>
+            </select>
+          </div>
+          <!-- Balance Display -->
+          <div class="mb-4">
+            <h4 class="text-sm font-medium text-gray-700">Child Balance</h4>
+            <p id="child-balance" class="text-lg font-bold text-gray-900">₹0</p>
+          </div>
+          <!-- Add Transaction -->
+          <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+            <select id="child-transaction-type" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+              <option value="debit">Debit</option>
+              <option value="credit">Credit</option>
+            </select>
+            <input id="child-transaction-amount" type="number" placeholder="Amount" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            <input id="child-transaction-description" type="text" placeholder="Description" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+          </div>
+          <button id="add-child-transaction" class="mt-4 bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition w-full sm:w-auto">Add Transaction</button>
+        </div>
+        <!-- Transaction Table -->
+        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md overflow-x-auto">
+          <table class="w-full">
+            <thead>
+              <tr class="bg-gray-200">
+                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Type</th>
+                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Amount</th>
+                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Description</th>
+                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="child-transaction-table"></tbody>
+          </table>
+        </div>
+      </div>
+      <!-- Profile Section (Unchanged) -->
       <div id="profile-section" class="hidden space-y-4 sm:space-y-6">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <div class="flex justify-between items-center mb-4">
@@ -236,6 +313,7 @@
     </main>
   </div>
 
+  <!-- Existing Modals (Unchanged) -->
   <div id="add-category-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
       <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Add New Category</h3>
@@ -267,6 +345,18 @@
           <button id="save-budget" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Save</button>
           <button id="cancel-budget" class="bg-gray-300 text-gray-700 p-3 rounded-lg hover:bg-gray-400 transition">Cancel</button>
         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- New Delete Confirmation Modal -->
+  <div id="delete-confirm-modal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
+    <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-sm sm:max-w-md">
+      <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Confirm Deletion</h3>
+      <p id="delete-confirm-message" class="text-sm text-gray-600 mb-4">Are you sure you want to delete this item?</p>
+      <div class="flex justify-end space-x-4">
+        <button id="confirm-delete" class="bg-red-600 text-white p-3 rounded-lg hover:bg-red-700 transition">Confirm</button>
+        <button id="cancel-delete" class="bg-gray-300 text-gray-700 p-3 rounded-lg hover:bg-gray-400 transition">Cancel</button>
       </div>
     </div>
   </div>
