--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     });
   </script>
   <script src="scripts.js" defer></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="/assets/tailwind.css" rel="stylesheet">
   <style>
     .table-row:nth-child(even) { background-color: #f9fafb; }
     .table-row:hover { background-color: #f3f4f6; }
