--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       }
     });
   </script>
-  <script src="scripts.js" defer></script>
+  <script type="module" src="/main.js"></script>
   <link href="/assets/tailwind.css" rel="stylesheet">
   <style>
     .table-row:nth-child(even) { background-color: #f9fafb; }
