--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>InRUSD: Family Budget</title>
   <link href="/assets/tailwind.css" rel="stylesheet">
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/main.js" defer></script>
+  <script>
+    window.addEventListener('load', () => {
+      if (!window.initApp) {
+        console.error('main.js failed to load or initialize');
+        document.body.innerHTML += '<p style="color: red; text-align: center;">Error: App failed to load. Please try refreshing or contact support.</p>';
+      }
+    });
+  </script>
   <style>
     .table-row:nth-child(even) { background-color: #f9fafb; }
     .table-row:hover { background-color: #f3f4f6; }
