--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>InRUSD: Family Budget</title>
   <link href="/assets/tailwind.css" rel="stylesheet">
-  <script type="module" src="/main.js" defer></script>
+  <script type="module" src="/js" defer></script>
   <script>
     window.addEventListener('load', () => {
       if (!window.initApp) {
