--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,8 @@
         <input id="login-password" type="password" placeholder="Password" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
         <button id="login-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Login</button>
         <div class="text-center space-x-4">
-          <button id="show-signup" onclick="document.getElementById('signup-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Sign Up</button>
-          <button id="show-reset" onclick="document.getElementById('reset-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Forgot Password?</button>
+          <button id="show-signup-btn" onclick="document.getElementById('signup-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Sign Up</button>
+          <button id="show-reset-btn" onclick="document.getElementById('reset-modal').classList.remove('hidden'); document.getElementById('login-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Forgot Password?</button>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
         </select>
         <button id="signup-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Sign Up</button>
         <div class="text-center">
-          <button id="show-login-from-signup" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('signup-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
+          <button id="show-login-from-signup-btn" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('signup-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <input id="reset-email" type="email" placeholder="Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
         <button id="reset-button" class="w-full bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition">Send Reset Link</button>
         <div class="text-center">
-          <button id="show-login-from-reset" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('reset-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
+          <button id="show-login-from-reset-btn" onclick="document.getElementById('login-modal').classList.remove('hidden'); document.getElementById('reset-modal').classList.add('hidden');" class="text-blue-600 hover:underline">Login</button>
         </div>
       </div>
     </div>
