--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>InRUSD: Family Budget</title>
   <link href="/assets/tailwind.css" rel="stylesheet">
-  <script type="module" src="/js" defer></script>
   <script>
+    console.log('index.html: Starting script load');
+    window.addEventListener('error', (event) => {
+      console.error('Global error:', {
+        message: event.message,
+        filename: event.filename,
+        lineno: event.lineno,
+        colno: event.colno,
+        error: event.error
+      });
+    });
     window.addEventListener('load', () => {
+      console.log('index.html: Window load event fired');
       if (!window.initApp) {
-        console.error('main.js failed to load or initialize');
+        console.error('index.js failed to load or initialize');
         document.body.innerHTML += '<p style="color: red; text-align: center;">Error: App failed to load. Please try refreshing or contact support.</p>';
+      } else {
+        console.log('index.js loaded successfully');
       }
     });
   </script>
+  <script type="module" src="/index.js" defer onload="console.log('index.js script tag loaded')" onerror="console.error('Failed to load index.js')"></script>
   <style>
     .table-row:nth-child(even) { background-color: #f9fafb; }
     .table-row:hover { background-color: #f3f4f6; }
