--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@
               <option value="income">Income</option>
               <option value="expense">Expense</option>
             </select>
-            <select id="category-budget" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            <select id="category-budget-select" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
               <option value="none">None</option>
               <option value="add-new">Add New</option>
             </select>
