--- a/src/index.html
+++ b/src/index.html
@@ -281,6 +281,8 @@
             <tbody id="child-transaction-table"></tbody>
           </table>
         </div>
+        <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-6">
+        </div>
       </div>
       <!-- Profile Section (Unchanged) -->
       <div id="profile-section" class="hidden space-y-4 sm:space-y-6">
