--- a/src/index.html
+++ b/src/index.html
@@ -110,47 +110,36 @@
       </div>
     </nav>
     <main class="p-4 sm:p-6">
-      <!-- Dashboard Section: Updated Balance Tile with After Budget -->
-      <div id="dashboard-section" class="space-y-4 sm:space-y-6">
-        <!-- Filter Controls -->
-        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-          <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Filter Dashboard</h3>
-          <div class="flex flex-col sm:flex-row gap-4">
-            <select id="dashboard-filter" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 w-full sm:w-auto">
-              <option value="1week">Last 1 Week</option>
-              <option value="1month">Last 1 Month</option>
-              <option value="thisMonth">This Month</option>
-              <option value="lastMonth">Last Month</option>
-              <option value="thisYear">This Year</option>
-              <option value="lastYear">Last Year</option>
-              <option value="custom">Custom Range</option>
-            </select>
-            <div id="custom-date-range" class="hidden flex flex-col sm:flex-row gap-4">
-              <input id="filter-start-date" type="date" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-              <input id="filter-end-date" type="date" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-            </div>
-          </div>
-        </div>
-        <!-- Summary Tiles: Moved After Budget to Balance Tile -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4 sm:gap-6">
-          <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-            <h3 class="text-base sm:text-lg font-semibold text-gray-700">Balance</h3>
-            <p id="balance" class="text-lg sm:text-2xl font-bold text-gray-900">₹0</p>
-            <p class="text-sm text-gray-500 mt-2">After Budget: <span id="after-budget">₹0</span></p>
-          </div>
-          <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-            <h3 class="text-base sm:text-lg font-semibold text-gray-700">Total Budget</h3>
-            <p id="total-budget" class="text-lg sm:text-2xl font-bold text-gray-900">₹0</p>
-          </div>
-          <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-            <h3 class="text-base sm:text-lg font-semibold text-gray-700">Total Unspent Budget</h3>
-            <p id="total-remaining" class="text-lg sm:text-2xl font-bold text-gray-900">₹0</p>
-          </div>
-        </div>
-        <!-- Budget and Child Tiles -->
-        <div id="budget-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
-        <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
+      <!-- Dashboard Section -->
+<div id="dashboard-section" class="space-y-4 sm:space-y-6">
+  <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+    <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Financial Overview</h3>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+      <div>
+        <h4 class="text-sm font-medium text-gray-700">Total Balance</h4>
+        <p id="balance" class="text-lg font-bold text-gray-900">₹0</p>
       </div>
+      <div>
+        <h4 class="text-sm font-medium text-gray-700">Balance After Budget</h4>
+        <p id="after-budget" class="text-lg font-bold text-gray-900">₹0</p>
+      </div>
+      <div>
+        <h4 class="text-sm font-medium text-gray-700">Child Balance</h4>
+        <p id="child-balance" class="text-lg font-bold text-gray-900 hidden">₹0</p>
+      </div>
+    </div>
+    <div class="mt-4">
+      <label class="block text-sm font-medium text-gray-700">Filter</label>
+      <select id="dashboard-filter" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <option value="thisMonth">This Month</option>
+        <option value="lastMonth">Last Month</option>
+        <option value="thisYear">This Year</option>
+      </select>
+    </div>
+  </div>
+  <!-- Budget Tiles or Other Dashboard Content -->
+  <div id="budget-tiles" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
+</div>
       <!-- Transactions Section (Unchanged) -->
       <div id="transactions-section" class="hidden space-y-4 sm:space-y-6">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
