--- a/src/index.html
+++ b/src/index.html
@@ -239,49 +239,50 @@
         </div>
       </div>
       <!-- Child Accounts Section -->
-      <div id="child-accounts-section" class="hidden space-y-4 sm:space-y-6">
-        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
-          <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Child Account Transactions</h3>
-          <!-- Admin: Child Selector -->
-          <div id="child-selector" class="mb-4 hidden">
-            <label class="block text-sm font-medium text-gray-700">Select Child</label>
-            <select id="child-user-id" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-              <option value="">Select a Child</option>
-            </select>
-          </div>
-          <!-- Balance Display -->
-          <div class="mb-4">
-            <h4 class="text-sm font-medium text-gray-700">Child Balance</h4>
-            <p id="child-balance" class="text-lg font-bold text-gray-900">₹0</p>
-          </div>
-          <!-- Add Transaction -->
-          <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-            <select id="child-transaction-type" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-              <option value="debit">Debit</option>
-              <option value="credit">Credit</option>
-            </select>
-            <input id="child-transaction-amount" type="number" placeholder="Amount" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-            <input id="child-transaction-description" type="text" placeholder="Description" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-          </div>
-          <button id="add-child-transaction" class="mt-4 bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition w-full sm:w-auto">Add Transaction</button>
-        </div>
-        <!-- Transaction Table -->
-        <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md overflow-x-auto">
-          <table class="w-full">
-            <thead>
-              <tr class="bg-gray-200">
-                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Type</th>
-                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Amount</th>
-                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Description</th>
-                <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Actions</th>
-              </tr>
-            </thead>
-            <tbody id="child-transaction-table"></tbody>
-          </table>
-        </div>
-        <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-6">
-        </div>
-      </div>
+<div id="child-accounts-section" class="hidden space-y-4 sm:space-y-6">
+  <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
+    <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Child Account Transactions</h3>
+    <!-- Admin: Child Selector -->
+    <div id="child-selector" class="mb-4 hidden">
+      <label class="block text-sm font-medium text-gray-700">Select Child</label>
+      <select id="child-user-id" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <option value="">Select a Child</option>
+      </select>
+    </div>
+    <!-- Balance Display -->
+    <div class="mb-4">
+      <h4 class="text-sm font-medium text-gray-700">Child Balance</h4>
+      <p id="child-balance" class="text-lg font-bold text-gray-900">₹0</p>
+    </div>
+    <!-- Add Transaction -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+      <select id="child-transaction-type" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <option value="debit">Debit</option>
+        <option value="credit">Credit</option>
+      </select>
+      <input id="child-transaction-amount" type="number" placeholder="Amount" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+      <input id="child-transaction-description" type="text" placeholder="Description" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+    </div>
+    <button id="add-child-transaction" class="mt-4 bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition w-full sm:w-auto">Add Transaction</button>
+  </div>
+  <!-- Transaction Table -->
+  <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md overflow-x-auto">
+    <table class="w-full">
+      <thead>
+        <tr class="bg-gray-200">
+          <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Type</th>
+          <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Amount</th>
+          <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Description</th>
+          <th class="w-12 px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700" id="child-transaction-date-header">Date</th>
+          <th class="px-4 sm:px-6 py-3 text-left text-xs sm:text-sm font-semibold text-gray-700">Actions</th>
+        </tr>
+      </thead>
+      <tbody id="child-transaction-table"></tbody>
+    </table>
+  </div>
+  <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-6">
+  </div>
+</div>
       <!-- Profile Section (Unchanged) -->
       <div id="profile-section" class="hidden space-y-4 sm:space-y-6">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
