--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
       <select id="signup-currency" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
         <option value="INR">INR</option>
         <option value="USD">USD</option>
+        <option value="ZAR">ZAR</option>
       </select>
       <select id="signup-account-type" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
         <option value="admin">Admin</option>
@@ -98,6 +99,7 @@
       <select id="currency-toggle" class="p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 bg-white text-gray-700 text-sm">
         <option value="INR">INR</option>
         <option value="USD">USD</option>
+        <option value="ZAR">ZAR</option>
       </select>
       <button id="logout-button" class="bg-red-600 text-white px-3 py-2 rounded-lg hover:bg-red-700 transition text-sm sm:text-base">Logout</button>
     </div>
