--- a/src/index.html
+++ b/src/index.html
@@ -312,6 +312,7 @@
               <select id="profile-currency" disabled class="w-full p-3 border rounded-lg bg-gray-100 focus:outline-none">
                 <option value="INR">INR</option>
                 <option value="USD">USD</option>
+                <option value="ZAR">ZAR</option>
               </select>
             </div>
             <div>
