--- a/src/index.html
+++ b/src/index.html
@@ -128,6 +128,50 @@
     <div id="swipeable-tabs" class="relative w-full overflow-x-hidden" aria-label="Swipe to change tabs">
       <!-- Dashboard Section -->
       <div id="dashboard-section" class="space-y-4 sm:space-y-6 transition-transform duration-300 ease-in-out">
+        <!-- Skeleton Loader -->
+        <div id="dashboard-skeleton" class="hidden">
+          <div class="space-y-4 sm:space-y-6">
+            <!-- Filter Controls Placeholder -->
+            <div class="bg-gray-200 p-4 sm:p-6 rounded-lg shadow-md animate-pulse">
+              <div class="h-6 bg-gray-300 rounded w-1/3 mb-4"></div>
+              <div class="flex flex-col sm:flex-row gap-4">
+                <div class="h-12 bg-gray-300 rounded w-full sm:w-40"></div>
+                <div class="h-12 bg-gray-300 rounded w-full sm:w-40 hidden"></div>
+              </div>
+            </div>
+            <!-- Summary Tiles Placeholder -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-6">
+              <div class="bg-gray-200 p-4 sm:p-6 rounded-lg shadow-md animate-pulse">
+                <div class="h-6 bg-gray-300 rounded w-1/3 mb-2"></div>
+                <div class="h-8 bg-gray-300 rounded w-1/2 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-3/4"></div>
+              </div>
+              <div class="bg-gray-200 p-4 sm:p-6 rounded-lg shadow-md animate-pulse">
+                <div class="h-6 bg-gray-300 rounded w-1/3 mb-2"></div>
+                <div class="h-8 bg-gray-300 rounded w-1/2 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-3/4"></div>
+              </div>
+            </div>
+            <!-- Budget/Child Tiles Placeholder -->
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
+              <div class="bg-gray-200 p-4 sm:p-6 rounded-lg shadow-md animate-pulse">
+                <div class="h-6 bg-gray-300 rounded w-3/4 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-1/2 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-1/2"></div>
+              </div>
+              <div class="bg-gray-200 p-4 sm:p-6 rounded-lg shadow-md animate-pulse">
+                <div class="h-6 bg-gray-300 rounded w-3/4 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-1/2 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-1/2"></div>
+              </div>
+              <div class="bg-gray-200 p-4 sm:p-6 rounded-lg shadow-md animate-pulse hidden lg:block">
+                <div class="h-6 bg-gray-300 rounded w-3/4 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-1/2 mb-2"></div>
+                <div class="h-4 bg-gray-300 rounded w-1/2"></div>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Filter Controls -->
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow-md">
           <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Filter Dashboard</h3>
