--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
             <select id="dashboard-filter" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600 w-full sm:w-auto">
               <option value="1week">Last 1 Week</option>
               <option value="1month">Last 1 Month</option>
-              <option value="thisMonth">This Month</option>
+              <option value="thisMonth" selected>This Month</option>
               <option value="lastMonth">Last Month</option>
               <option value="thisYear">This Year</option>
               <option value="lastYear">Last Year</option>
