--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>InRUSD: Family Budget</title>
   <link href="/assets/tailwind.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.min.js"></script>
   <script>
     console.log('index.html: Starting script load');
     window.addEventListener('error', (event) => {
@@ -163,6 +164,11 @@
         <!-- Budget and Child Tiles -->
         <div id="budget-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
         <div id="child-tiles" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
+        <!-- Spending Pie Chart -->
+        <div id="spending-chart-container" class="mt-6 bg-white p-4 sm:p-6 rounded-lg shadow-md">
+          <h3 class="text-base sm:text-lg font-semibold text-gray-700 mb-4">Spending by Category</h3>
+          <canvas id="spending-pie-chart" style="max-width: 400px; margin: 0 auto;"></canvas>
+        </div>
       </div>
       <!-- Transactions Section -->
       <div id="transactions-section" class="hidden space-y-4 sm:space-y-6 transition-transform duration-300 ease-in-out">
